fix icons spacing

--- a/styles/main/_icons.scss
+++ b/styles/main/_icons.scss
@@ -1,7 +1,3 @@
-.c-icon-plugin {
-  margin-right: 1em;
-}
-
 .c-deprecated-icon--danger {
   color: $red;
 }
